// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getExchangePriceFix 1`] = `
Object {
  "price": 634.7,
  "timestamp": 1524453966393,
  "volume": 0.4,
}
`;

exports[`getExchangePriceFix 2`] = `
Object {
  "price": 637,
  "timestamp": 1524465953111,
  "volume": 6.002117,
}
`;

exports[`getExchangePriceFix 3`] = `
Object {
  "price": 667,
  "timestamp": 1524547898561,
  "volume": 0.024,
}
`;

exports[`getExchangePriceFix 4`] = `
Object {
  "price": 633,
  "timestamp": 1524463065507,
  "volume": 8.67,
}
`;

exports[`getHourlyOHLCFromTrades 1`] = `
Object {
  "close": 582.37,
  "date": "2018-06-01",
  "high": 582.89,
  "hour": "07",
  "low": 582.37,
  "minute": 0,
  "open": 582.88,
  "source": "GDAX",
  "timestamp": 1234567890,
  "volume": 22.7239794,
}
`;

exports[`getMinutelyOHLCFromTrades 1`] = `
Object {
  "close": 573,
  "date": "2018-06-01",
  "high": 573,
  "hour": "05",
  "low": 572.99,
  "minute": 54,
  "open": 573,
  "source": "GDAX",
  "timestamp": 1234567890,
  "volume": 1.99720278,
}
`;

exports[`getPriceFix case 1 1`] = `
Object {
  "price": 666.98,
  "timestamp": 1524547909941,
  "volume": 0.16599999999999998,
}
`;

exports[`getPriceFix case 2 1`] = `
Object {
  "price": 638.5705,
  "timestamp": 1524547909941,
  "volume": 35.73263379,
}
`;

exports[`getVolumeMedianPrice 1`] = `
Object {
  "price": 634.69,
  "timestamp": 1234567890,
  "volume": 3.15308079,
}
`;

exports[`getVolumeMedianPrice 2`] = `
Object {
  "price": 638,
  "timestamp": 1234567890,
  "volume": 22.681753,
}
`;

exports[`getVolumeMedianPrice 3`] = `
Object {
  "price": 666.98,
  "timestamp": 1234567890,
  "volume": 0.16599999999999998,
}
`;

exports[`getVolumeMedianPrice 4`] = `
Object {
  "price": 633,
  "timestamp": 1234567890,
  "volume": 12.835600000000001,
}
`;

exports[`modifyWeights 1`] = `
Array [
  0.35,
  0.3,
  0.17500000000000004,
  0.17500000000000004,
]
`;

exports[`modifyWeights 2`] = `
Array [
  0.55,
  0.29999999999999993,
  0.14999999999999997,
]
`;

exports[`modifyWeights 3`] = `
Array [
  0.65,
  0.35,
]
`;
